--- a/public_html/css.css
+++ b/public_html/css.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: "Century Gothic";
+  src: url("fonts/Century_Gothic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Impact";
+  src: url("fonts/Impact.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Arial";
+  src: url("fonts/Arial.ttf") format("truetype");
+}
+
+
 .header { 
 	text-align: center;
 	margin: auto;	
@@ -85,13 +101,11 @@ hr {
 	font-size: 36pt;
 	font-weight: bold;
 	z-index: 10;
-	text-shadow: black 1px 0px, black 1px 1px, black 0px 1px, black -1px 1px, black -1px 0px, black -1px -1px, black 0px -1px, black 1px -1px;
 }
 
 #podzagolovok {
 	font-family: Century Gothic;
 	font-size: 16pt;
-	background-color: white;
 	margin: 5%;
 	float: right;
 }
